# nlm-open-cli

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-TW.md  SECURITY.md  llms.txt
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: Architecture.md  CLI-USER-GUIDE.md  PRD.md  install.md  skills.md
docs/internal/: Architecture.md  PRD.md
npm/: README.md  install.js  package.json
skills/nlm-config/: SKILL.md
skills/nlm-edm/: SKILL.md
skills/nlm-edm-ab-test/: SKILL.md
skills/nlm-edm-account/: SKILL.md
skills/nlm-edm-automation/: SKILL.md
skills/nlm-edm-campaign/: SKILL.md
skills/nlm-edm-contacts/: SKILL.md
skills/nlm-edm-report/: SKILL.md
skills/nlm-edm-template/: SKILL.md
skills/nlm-helper-campaign-send/: SKILL.md
skills/nlm-helper-domain-setup/: SKILL.md
skills/nlm-helper-import-and-wait/: SKILL.md
skills/nlm-helper-report-download/: SKILL.md
skills/nlm-mcp/: SKILL.md
skills/nlm-shared/: SKILL.md
skills/nlm-sn/: SKILL.md
skills/nlm-sn-domain/: SKILL.md
skills/nlm-sn-email/: SKILL.md
skills/nlm-sn-sms/: SKILL.md
skills/nlm-sn-sms-webhook/: SKILL.md
skills/nlm-sn-webhook/: SKILL.md
skills/persona-customer-success/: SKILL.md
skills/persona-developer/: SKILL.md
src/: error.rs  lib.rs  main.rs
src/cli/: mcp.rs  mod.rs
tests/: cli_integration_test.rs  edm_api_test.rs  formatter_snapshot_test.rs  mcp_client_test.rs  sn_api_test.rs
(+76 files in other folders)
