[package]
name = "nlm-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for Newsleopard EDM API and Surenotify transactional messaging API"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Newsleopard/nlm-open-cli"
homepage = "https://github.com/Newsleopard/nlm-open-cli"
readme = "README.md"
keywords = ["cli", "email", "marketing", "edm", "newsletter"]
categories = ["command-line-utilities"]

[[bin]]
name = "nlm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "color", "wrap_help"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
csv = "1.3"
thiserror = "2"
anyhow = "1"
toml = "0.8"
dirs = "5"
governor = "0.7"
backoff = { version = "0.4", features = ["tokio"] }
tabled = "0.16"
colored = "2.1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
dialoguer = "0.11"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["json", "yaml"] }

[profile.release]
lto = "thin"
strip = true
